@@ -9,6 +9,7 @@ V0.80 - soon
 - NEW : Cache option for SinglePic
 - NEW : Permalink support
 - NEW : Custom fields support - Change the settings for each post/page
+- Changed : Up to 10 Widgets, exclude galleries from random/recent images. 
 - Changed : Refactor permission check for Safe-Mode Check and mkdir/chmod
 - Changed : Admin CSS in new folder/file for better structure
 - Changed : Clean up folder structure
